Migrating website content from Bandeau-LRM interface to Hub Santé EDL

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr" class="no-js" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Interface entre LRM & SI-SAMU - ANS</title>
+    <title>Hub Santé - ANS</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="google-site-verification" content="Ra_OXTcYcctxzA0QXcpNtzPI8Rb5u4g8p7IQzvCngVM"/>
+    <meta name="google-site-verification" content="mvufymUZYf1LuG-AqC_Tb2aMaSPjYDnoiI_GFGoqWnc" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/jjx2ksb.css">
     <link rel="stylesheet" href="./style/style-ans.css" type="text/css">
@@ -42,7 +42,7 @@
                     </a>
                 </div>
             </div>
-            <p class="header__title">Interface LRM - SI-SAMU</p>
+            <p class="header__title">Hub Santé</p>
         </div>
         <div class="header-principal-right">
             <div class="header-principal__nav">
@@ -76,12 +76,14 @@
                                 </li>
                                 <li class="nav-item common-nav-item">
 
-                                    <a class="nav-link" href="#SAMU">SAMU</a>
+                                    <a class="nav-link" href="#objectives">Objectifs</a>
                                 </li>
                                 <li class="nav-item common-nav-item">
 
-                                    <a class="nav-link" href="#LRM">LRM</a>
+                                    <a class="nav-link" href="#benefits">Avantages</a>
                                 </li>
+
+                                <!--
                                 <li class="nav-item common-nav-item">
 
                                     <button class="nav-link" type="button"
@@ -116,6 +118,7 @@
                                         </div>
                                     </div>
                                 </li>
+                                -->
                             </ul>
                         </nav>
 
@@ -173,140 +176,71 @@
     <main class="main" role="main" id="main" tabindex="-1">
         <div class="container">
             <!-- Emplacement du Contenu -->
-            <h1 class="page-heading">Interface entre les logiciels de régulation médicale (LRM) et le bandeau
-                téléphonique SI-SAMU</h1>
+            <h1 class="page-heading">Hub Santé, la plateforme d'interopérabilité des Urgences</h1>
             <p class="lead">Pour s’inscrire dans la logique d’Etat plate-forme et incarner la nouvelle orientation pour
                 la modernisation des SAMU.</p>
-            <p>Issue <b>d’une concertation et d’une collaboration avec les éditeurs</b>, cette interface entre le
-                bandeau téléphonique du SI-SAMU et les logiciels de LRM constitue une <b>avancée importante en termes
-                    d’ergonomie</b> et de facilité d’utilisation pour les agents des Samu.</p>
+            <p>Né des <b>retours terrains des métiers et éditeurs</b>, le Hub Santé est un projet de l'Agence du Numérique
+                en Santé (ANS) visant à <b>interopérer l'écosystème des Urgences</b> en offrant une plateforme nationale d'<b>échange de
+                messages et des modèles de données associés</b>.
+            </p>
 
-            <h3 id="presentation">Présentation générale du bandeau SI-SAMU</h3>
-            Le bandeau téléphonique SI-SAMU permet à ses utilisateurs de piloter et manipuler facilement, et avec
-            sérénité et résilience, les appels de leur centre de régulation directement depuis son interface Web. Le
-            bandeau se compose de plusieurs volets :
+            <h3 id="presentation">Présentation</h3>
+            <p>
+                Le Hub Santé est une plateforme qui permet un <b>échange sécurisé de données</b> au niveau de la Santé, avec l’écosystème des SAMU.
+            </p>
+            Cette plateforme sert à aiguiller les informations d'un SAMU vers un autre SAMU ou d'un SAMU vers ses partenaires.
+            En s'appuyant sur les Logiciels de Régulation Médicale (LRM), elle permet donc les liens suivants :
             <div class="wysiwyg">
                 <ul>
-                    <li>
-                        Une <b>infrastructure téléphonique centralisée et résiliente</b> permettant d’opérer à un niveau
-                        d’exigence élevé même lors de problèmes sur les composants du système.
-                    </li>
-                    <li>
-                        Un <b>guide vocal interactif</b> permettant de placer les appels en attente et de les
-                        préqualifier.
-                    </li>
-                    <li>
-                        Un <b>système d’enregistrement</b> de toutes les communications permettant de confirmer des
-                        informations, de faciliter la formation et de répondre à une réclamation.
-                    </li>
-                    <li>
-                        Une <b>distribution des appels hautement paramétrable</b> permettant de coller aux besoins
-                        opérationnels des SAMU.
-                    </li>
-                    <li>
-                        Une <b>interface web moderne et intuitive</b> de couplage téléphonie-informatique offrant une
-                        vue claire sur la situation des appels en cours sur le SAMU et une manipulation facilitée des
-                        appels (décroché, transfert, mise en attente, conférence, …).
-                    </li>
+                    <li><b>15-18</b>, avec NexSIS (système national de gestion des alertes des SDIS)</li>
+                    <li><b>15-15</b>, avec le LRM d'un autre SAMU (quel que soit l'éditeur)</li>
+                    <li><b>15-17</b>, avec les systèmes nationaux de la Police et de la Gendarmerie</li>
+                    <li><b>15-X</b>, avec tout autre logiciel partenaire du SAMU (hélicoptères, tablettes SMUR, SI-CAP, CNR114, etc..)</li>
                 </ul>
             </div>
             <br>
-            <p>
-                Avec la nouvelle stratégie du SI-SAMU, le programme n’a <b>plus vocation à développer un logiciel de
-                régulation médicale (LRM)</b> permettant aux SAMU de créer et suivre les dossiers patients ainsi que de
-                déclencher des moyens d’intervention. Au contraire, le programme SI-SAMU veut <b>désormais valoriser et
-                s’appuyer sur les éditeurs de LRM en fournissant une brique téléphonique robuste</b> et garantissant un
-                service performant à tous les citoyens.
-            </p>
-            <p>
-                Le SI-SAMU permet donc aux éditeurs de LRM de s’interfacer avec son bandeau téléphonique. Cela permet
-                ainsi à l’utilisateur de déclencher directement des appels depuis son LRM ainsi que d’afficher
-                automatiquement le dossier patient correspondant aux appels entrants ou transférés à l’utilisateur.
-            </p>
 
-            <h3 id="SAMU">Pour les SAMU</h3>
-            <p>
-                Les SAMU-Centres 15 qui veulent utiliser une solution bandeau SI-SAMU - LRM doivent préalablement
-                contractualiser avec le fournisseur de LRM de leur choix, indépendamment du SI-SAMU mais étant interfacé
-                avec le bandeau téléphonique du SI-SAMU.
-            </p>
-            <!-- ToDo: Attendre l'ouverture en prod de l'interface
-            <p>
-                A ce jour, les <b>éditeurs interfacés sont BISOM et Inetum</b> – Centaure 15. Les échanges avec Appligos
-                sont en cours.
-            </p>
-            -->
-            <p>
-                Les SAMU-Centres 15 doivent également se rapprocher de l’équipe SI-SAMU afin d’étudier et de planifier
-                le déploiement de la solution de bandeau téléphonique pour leur SAMU.
-            </p>
-
-            <h3 id="LRM">Pour les LRM (Logiciels de Régulation Médicale)</h3>
-            Le SI-SAMU fournit une documentation publique de son interface à travers
+            <h3 id="objectives">Objectifs</h3>
+            Les objectifs du Hub Santé sont :
             <div class="wysiwyg">
                 <ul>
-                    <li>
-                        Un
-                        <a href="DST SI SAMU Interfaçage LRM_V1.2.pdf">
-                            <b>Dossier des Spécifications Techniques (DST)</b> (1Mo - PDF)
-                        </a>
-                        présentant le cadre de l’interface et les services associés.
-                    </li>
-                    <li>
-                        Une
-                        <a href="https://github.com/ansforge/SAMU-interface-LRM/tree/main/specs" target="_blank">
-                            <b>documentation technique OpenAPI</b>
-                        </a>
-                        spécifiant les détails techniques associés aux services de l’interface ainsi que fournissant des
-                        clients et bouchons serveurs auto-générés. Des pages de documentation interactive pour les
-                        interfaces côté
-                        <a href="lrm.html">LRM</a> et <a href="si-samu.html">SI-SAMU</a> sont d'ailleurs disponibles.
-                    </li>
-                    <!-- ToDo: compiler le guide en une version partageable
-                    <li>
-                        Un <b>guide facilitant l’obtention de cartes et de certificats</b> d’authentification, clés pour
-                        garantir la sécurité des échanges.
-                    </li>
-                    -->
-                    <li>
-                        Une
-                        <a href="mailto:api-lrm.contact-editeur@esante.gouv.fr">
-                            <b>adresse email dédiée</b>
-                        </a>
-                        et un
-                        <a href="https://contact-api-lrm.slack.com/join/shared_invite/zt-1lbpmutlh-vsq4ilHZ5ciNezo8Y35FlA"
-                           target="_blank">
-                            <b>espace de discussions Slack</b>
-                        </a>
-                        pour que chacun puisse échanger sur l’interface, proposer des évolutions et demander de l’aide.
-                    </li>
+                    <li>d'<b>automatiser le partage</b> et la synchronisation d'information avec un autre acteur de l'écosystème du SAMU</li>
+                    <li>de <b>renforcer la coopération</b> entre les acteurs des urgences</li>
+                    <li>de <b>gagner du temps</b> et de limiter la perte d'informations dans les échanges</li>
+                    <li>d'<b>éviter la multiplicité</b> des liens entre le LRM du SAMU et les autres logiciels</li>
+                    <li>de <b>définir un cadre d'interopérabilité</b> et un référentiel commun aux éditeurs</li>
                 </ul>
             </div>
             <br>
-            <p>
-                Une fois les services LRM implémentés par l’éditeur, il est possible de tester l’intégration avec le
-                bandeau téléphonique du SI-SAMU grâce à l’<b>accès à une instance de test</b> de la solution.
-            </p>
-            <p>
-                Enfin, les éditeurs souhaitant déployer l’interface pour leurs SAMU doivent contacter le SI-SAMU afin
-                d’activer l’interface, de paramétrer les accès et de sécuriser les échanges grâce à des certificats
-                issus de l’IGC Santé.
-            </p>
+
+            <h3 id="benefits">Avantages</h3>
+            <b>Porté au niveau national</b> par l'Agence du Numérique en Santé (ANS) et <b>co-construit avec le métier,
+            les éditeurs et les partenaires</b>, le Hub Santé offre de nombreux avantages :
+            <div class="wysiwyg">
+                <ul>
+                    <li>Une <b>architecture nationale résiliente et sécurisée</b> qui permet une continuité des échanges en cas de panne ou de redémarrage d'un logiciel connecté</li>
+                    <li>Le <b>SAMU reste maître de ses données</b> et de leur partage</li>
+                    <li><b>Standardisation au niveau national</b> du transfert d'information entre les SAMU et leurs partenaires</li>
+                    <li><b>Pas de perte</b> ou de modification de l'information pendant les échanges</li>
+                    <li>Possibilité d'<b>interconnecter le LRM</b> avec tout type de logiciels actuels et futurs</li>
+                    <li><b>Plus de double saisie</b> des informations</li>
+                    <li><b>Réduction des appels</b> et temps d'attente</li>
+                    <li><b>Synchronisation automatique</b> des données dans le LRM</li>
+                    <li><b>Fédération des éditeurs</b> de SAMU autour d’un langage commun permettant au SAMU de choisir la solution qui lui convient le plus tout en lui garantissant le dialogue avec des solutions différentes</li>
+                </ul>
+            </div>
             <br>
-            <p>
-                Dans sa nouvelle approche, le programme SI-SAMU recherche activement les échanges et collaborations donc
-                n'hésitez pas à vous pencher sur cette interface et nous rejoindre :
-            </p>
+
             <div class="btn-list">
-                <a href="lrm.html" class="btn btn--style1 btn--white" style="margin-bottom: 10px;">
-                    LRM
-                </a>
-                <a href="si-samu.html" class="btn btn--style1 btn--white" style="margin-bottom: 10px;">
-                    SI-SAMU
-                </a>
-                <a href="mailto:api-lrm.contact-editeur@esante.gouv.fr" class="btn btn--style1 btn--white"
+                <a href="mailto:hubsante.contact@esante.gouv.fr" class="btn btn--style1 btn--white"
                    style="margin-bottom: 10px;">
                     Nous contacter
+                </a>
+                <a href="https://esante.gouv.fr/si-samu" class="btn btn--style1 btn--white" style="margin-bottom: 10px;" target="_blank">
+                    SI-SAMU
+                </a>
+                <a href="https://esante.gouv.fr/" class="btn btn--style1 btn--white" style="margin-bottom: 10px;" target="_blank">
+                    ANS
                 </a>
             </div>
         </div>
