Adding resources (démo #1 + fiche produit)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/jjx2ksb.css">
     <link rel="stylesheet" href="./style/style-ans.css" type="text/css">
+    <link rel="stylesheet" href="./style/style-esante.css" type="text/css">
+    <link rel="stylesheet" href="./style/mise-en-avant.css" type="text/css">
     <link rel="stylesheet" href="./style/print.css" type="text/css" media="print">
     <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
@@ -81,6 +83,14 @@
                                 <li class="nav-item common-nav-item">
 
                                     <a class="nav-link" href="#benefits">Avantages</a>
+                                </li>
+                                <li class="nav-item common-nav-item">
+
+                                    <a class="nav-link" href="#resources">Ressources</a>
+                                </li>
+                                <li class="nav-item common-nav-item">
+
+                                    <a class="nav-link" href="#links">Liens</a>
                                 </li>
 
                                 <!--
@@ -230,16 +240,76 @@
                 </ul>
             </div>
             <br>
+            <h3 id="resources">Ressources</h3>
+            <p>Ce site web permet de partager les documents et informations relatifs au Hub Santé et sera enrichi progressivement.</p>
+            <p>
+                <a href="resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white" target="_blank">
+                    Fiche produit Hub Santé (pdf - 0.17Mo)
+                </a>
+            </p>
+            <div class="container paragraph-space">
+                <div class="o-paragraph--image-texte-cta">
+                    <div class="o-paragraph--image-texte-cta__content bg-white rounded-lg top-left-radius-0 shadow-lg">
+                        <h2>Démonstration #1 - Lundi 5 juin 2023</h2>
+                        <div class="wysiwyg mb-3">
+                            <p>
+                                Principalement orientée pour les équipes internes du programme SI-SAMU ainsi que nos partenaires métiers,
+                                cette première démonstration du Hub Santé est constituée d'une présentation globale du projet
+                                et d'une démonstration technique de la plateforme.
+                            </p>
+                        </div>
+                        <div class="paragraph--lien">
+                            <a
+                                href="https://youtu.be/8Z4PShefKYg"
+                                class="btn btn--style1 btn--white"
+                                style="margin-bottom: 10px;"
+                                target="_blank"
+                            >
+                                Replay
+                            </a>
+                            <a
+                                href="resources/23.06%20Démo%20Hub%20Santé%20-%20ANS%20et%20partenaires.pdf"
+                                class="btn btn--style1 btn--white"
+                                target="_blank"
+                            >
+                                Slides (pdf - 2.52Mo)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <h3 id="links">Liens</h3>
             <div class="btn-list">
-                <a href="mailto:hubsante.contact@esante.gouv.fr" class="btn btn--style1 btn--white"
-                   style="margin-bottom: 10px;">
+                <a
+                        href="mailto:hubsante.contact@esante.gouv.fr"
+                        class="btn btn--style1 btn--white"
+                        style="margin-bottom: 10px;"
+                >
                     Nous contacter
                 </a>
-                <a href="https://esante.gouv.fr/si-samu" class="btn btn--style1 btn--white" style="margin-bottom: 10px;" target="_blank">
+                <a
+                        href="https://airtable.com/shrL8gqPvYzpv4h26"
+                        class="btn btn--style1 btn--white"
+                        style="margin-bottom: 10px;"
+                        target="_blank"
+                >
+                    Feedback
+                </a>
+                <a
+                    href="https://esante.gouv.fr/si-samu"
+                    class="btn btn--style1 btn--white"
+                    style="margin-bottom: 10px;"
+                    target="_blank"
+                >
                     SI-SAMU
                 </a>
-                <a href="https://esante.gouv.fr/" class="btn btn--style1 btn--white" style="margin-bottom: 10px;" target="_blank">
+                <a
+                    href="https://esante.gouv.fr/"
+                    class="btn btn--style1 btn--white"
+                    style="margin-bottom: 10px;"
+                    target="_blank"
+                >
                     ANS
                 </a>
             </div>
