--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -195,7 +195,7 @@
 
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
-        <main class="main" role="main" id="main" tabindex="-1">
+        <main class="main bg-drop bg-drop--reverse" role="main" id="main" tabindex="-1">
 
 
             <!-- Bannière page d'accueil-->
