--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -296,15 +296,14 @@
                         </div>
                     </div>
                     <div class="o-paragraph--columns__cards row col--eq-height mt-4">
-                        <div class="mb-3 col-sm-6 col-lg-3">
+                        <div class="mb-3 col-sm-6 col-lg-3 ">
                             <a href="/pages/15-18.html"
-                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
+                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0 pb-6">
                                 <div class="m-card__img">
                                     <img src="/img/resize/Image Nexis_RC.png" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-18</h3>
-                                <p>avec NexSIS (système national de gestion des alertes des SDIS​)</p>
-                                <p></p>
+                                <p class="mb-lg-1">avec NexSIS (système national de gestion des alertes des SDIS​)</p>
                             </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
@@ -314,9 +313,7 @@
                                     <img src="/img/resize/IMG_SAMU_RC.jpg" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-15</h3>
-                                <p>avec le LRM d'un autre SAMU (quel que soit l'éditeur)
-                                    <p></p>
-                                </p>
+                                <p class="mb-lg-1">avec le LRM d'un autre SAMU (quel que soit l'éditeur)</p>
                             </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
@@ -325,13 +322,13 @@
                                     <img src="/img/resize/SICAP_RC.jpg" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-17</h3>
-                                <p>15-17, avec les systèmes nationaux de la Police et de la Gendarmerie
-                                <p></p>
+                                <p class="mb-lg-1">15-17, avec les systèmes nationaux de la Police et de la Gendarmerie
                                 </p>
                             </div>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
-                            <div class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
+                            <div
+                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0 pb-lg-2">
                                 <div class="m-card__img">
                                     <img src="/img/resize/IMG_Cadres de références et standards_RC.jpg" alt=""
                                         loading="lazy">
