--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -298,7 +298,7 @@
                     <div class="o-paragraph--columns__cards row col--eq-height mt-4">
                         <div class="mb-3 col-sm-6 col-lg-3 ">
                             <a href="/pages/15-18.html"
-                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0 pb-6">
+                                class="m-card bg-primary text-white m-card--img-top rounded-md top-left-radius-0">
                                 <div class="m-card__img">
                                     <img src="/img/resize/Image Nexis_RC.png" alt="" loading="lazy">
                                 </div>
@@ -344,19 +344,50 @@
                 </div>
 
                 <!-- Objectifs -->
-                <div class="container paragraph-space paragraph--title-text text-center py-5">
-                    <h2>Objectifs </h2>
-                </div>
-
-                <!-- Avantages -->
-                <div class="container paragraph-space paragraph--title-text text-center py-5">
-                    <h2>Avantages </h2>
-                    <div class="wysiwyg text-md-left">
-                        <p>Porté au niveau national par l'Agence du Numérique en Santé (ANS) et co-construit avec le
-                            métier, les éditeurs et les partenaires, le Hub Santé offre de nombreux avantages.
-                        </p>
+                <div class="container py-5">
+                    <div class="paragraph__header row justify-content-center text-center">
+                        <h2>Objectifs</h2>
                     </div>
-                </div>
+                    <div class="row justify-content-around mt-4">
+                        <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
+                            <div class="m-card bg-gray-400 rounded-md top-left-radius-0">
+                                <p><b>Automatiser</b> le partage et la <b>synchronisation d'information</b> avec un
+                                    autre acteur de l'écosystème du SAMU​
+                                </p>
+                            </div>
+                        </div>
+                        <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
+                            <div class="m-card bg-gray-400 rounded-md top-left-radius-0">
+                                <p><b>Renforcer la coopération</b> entre les acteurs des urgences</p>
+                            </div>
+                        </div>
+                        <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
+                            <div class="m-card bg-gray-400 rounded-md top-left-radius-0">
+                                <p>Gagner du temps et <b>limiter la perte d'informations</b> dans les échanges</p>
+                            </div>
+                        </div>
+                        <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
+                            <div class="m-card bg-gray-400 rounded-md top-left-radius-0">
+                                <p><b>Éviter la multiplicité des liens</b> entre le LRM du SAMU et les autres logiciels
+                                </p>
+                            </div>
+                        </div>
+                        <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
+                            <div class="m-card bg-gray-400 rounded-md top-left-radius-0">
+                                <p>Définir un <b>cadre d'interopérabilité</b> et un référentiel commun aux éditeurs</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Avantages -->
+                    <div class="container paragraph-space paragraph--title-text text-center py-5">
+                        <h2>Avantages </h2>
+                        <div class="wysiwyg text-md-left">
+                            <p>Porté au niveau national par l'Agence du Numérique en Santé (ANS) et co-construit avec le
+                                métier, les éditeurs et les partenaires, le Hub Santé offre de nombreux avantages.
+                            </p>
+                        </div>
+                    </div>
         </main>
     </div>
 
