--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -279,8 +279,8 @@
                 </div>
             </div>
 
-            <!-- Bandeau "La plateforme" -->
             <div class="paragraph-space o-paragraph--columns">
+                <!-- Bandeau "La plateforme" -->
                 <div class="container">
                     <div class="paragraph__header row justify-content-center">
                         <div class="col-md-10 col-lg-8 text-center">
@@ -378,16 +378,64 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Avantages -->
-                    <div class="container paragraph-space paragraph--title-text text-center py-5">
-                        <h2>Avantages </h2>
-                        <div class="wysiwyg text-md-left">
-                            <p>Porté au niveau national par l'Agence du Numérique en Santé (ANS) et co-construit avec le
-                                métier, les éditeurs et les partenaires, le Hub Santé offre de nombreux avantages.
-                            </p>
+                </div>
+                <!-- Avantages -->
+                <div class="container paragraph-space paragraph--title-text text-center py-5">
+                    <h2>Avantages </h2>
+                    <div class="wysiwyg text-md-left">
+                        <p>Porté au niveau national par l'Agence du Numérique en Santé (ANS) et co-construit avec le
+                            métier, les éditeurs et les partenaires, le Hub Santé offre de nombreux avantages.
+                        </p>
+                    </div>
+                    <div class="row mx-5 my-2">
+                        <div class="col-sm-auto">
+                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                                width="133" height="77" loading="lazy">
+                        </div>
+                        <div class="col text-left">
+                            <h3>Résilience</h3>
+                            <div class="wysiwyg">
+                                <ul>
+                                    <li>Une architecture nationale résiliente et sécurisée qui permet une continuité des
+                                        échanges en cas de panne ou de redémarrage d'un logiciel connecté​</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+
+                    <div class="row mx-5 my-2">
+                        <div class="col-sm-auto">
+                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                                width="133" height="77" loading="lazy">
+                        </div>
+                        <div class="col text-left">
+                            <h3>Résilience</h3>
+                            <div class="wysiwyg">
+                                <ul>
+                                    <li>Une architecture nationale résiliente et sécurisée qui permet une continuité des
+                                        échanges en cas de panne ou de redémarrage d'un logiciel connecté​</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mx-5 my-2">
+                        <div class="col-sm-auto">
+                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                                width="133" height="77" loading="lazy">
+                        </div>
+                        <div class="col text-left">
+                            <h3>Résilience</h3>
+                            <div class="wysiwyg">
+                                <ul>
+                                    <li>Une architecture nationale résiliente et sécurisée qui permet une continuité des
+                                        échanges en cas de panne ou de redémarrage d'un logiciel connecté​</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
