Adding fil d'Ariane

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -387,9 +387,9 @@
                             métier, les éditeurs et les partenaires, le Hub Santé offre de nombreux avantages.
                         </p>
                     </div>
-                    <div class="row mx-5 my-2">
+                    <div class="row mx-lg-5 my-2">
                         <div class="col-sm-auto">
-                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                            <img src="/img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
                                 width="133" height="77" loading="lazy">
                         </div>
                         <div class="col text-left">
@@ -403,9 +403,9 @@
                         </div>
                     </div>
 
-                    <div class="row mx-5 my-2">
+                    <div class="row mx-lg-5 my-2">
                         <div class="col-sm-auto">
-                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                            <img src="/img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
                                 width="133" height="77" loading="lazy">
                         </div>
                         <div class="col text-left">
@@ -419,9 +419,9 @@
                         </div>
                     </div>
 
-                    <div class="row mx-5 my-2">
+                    <div class="row mx-lg-5 my-2">
                         <div class="col-sm-auto">
-                            <img src="img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
+                            <img src="/img/pictogrammes-illustratifs/Offres_Portails_generiques.svg" alt="Résilience"
                                 width="133" height="77" loading="lazy">
                         </div>
                         <div class="col text-left">
@@ -460,7 +460,7 @@
                                 title="Ministère de la Santé et de la Prévention (nouvelle fenêtre)" target="_blank"
                                 rel="nofollow">
 
-                                <img src="img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
+                                <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
                                     width="133" height="77" loading="lazy">
 
                             </a>
@@ -469,7 +469,7 @@
                             <a href="https://esante.gouv.fr/" title="Agence du Numérique en Santé (nouvelle fenêtre)"
                                 target="_blank" rel="nofollow">
 
-                                <img src="img/logo-ANS-footer.svg" alt="Agence du Numérique en Santé" width="106"
+                                <img src="/img/logo-ANS-footer.svg" alt="Agence du Numérique en Santé" width="106"
                                     height="74" loading="lazy">
 
                             </a>
