Making StyleGuide Remontées Diverses work

--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="no-js" dir="ltr">
+<html lang="fr" class="no-js sg" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/jjx2ksb.css">
     <link rel="stylesheet" href="/style/style-ans.css" type="text/css">
     <link rel="stylesheet" href="/style/style-esante.css" type="text/css">
+    <link rel="stylesheet" href="/style/print.css" type="text/css">
+    <link rel="stylesheet" href="/style/styleguide.css" type="text/css">
     <link rel="stylesheet" href="/style/bloc-global.css" type="text/css">
     <link rel="stylesheet" href="/style/bloc-o-banniere.css" type="text/css">
     <link rel="stylesheet" href="/style/bloc-globale-sliders.css" type="text/css">
@@ -217,11 +219,11 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/index.html">Accueil<svg
                                         class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item"><a href="#">Le Hub santé <svg class="svg-icon svg-angle-right"
                                         aria-hidden="true" focusable="false">
-                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item active" aria-current="page">Les actualités du Hub Santé</li>
                         </ol>
@@ -260,7 +262,7 @@
                     </clipPath>
                 </defs>
             </svg>
-            <div class="bg-gray-500 py-2">
+            <div class="bg-gray-800 py-2">
                 <div class="container paragraph-space">
                     <div class="o-paragraph--image-texte-cta leftVisual">
                         <div
@@ -298,32 +300,6 @@
                     <div class="o-paragraph--mixed-push__teasers mt-4">
                         <div class="o-paragraph--mixed-push__slider col--eq-height">
 
-
-
-
-                            <article class="m-teaser m-teaser--news mb-3 col--eq-height">
-                                <a href="#" class="bg-white border rounded-md top-left-radius-0">
-
-                                    <div class="m-teaser__img">
-                                        <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
-
-                                            <img src="https://picsum.photos/378/213" width="378" height="213" alt=""
-                                                loading="lazy">
-
-                                        </div>
-
-                                        <div class="m-teaser__content">
-                                            <h3 class="m-teaser__title h4 mb-1">Lorem ipsum</h3>
-
-
-                                            <p class="m-teaser__date mb-1">01 Juillet 2021</p>
-                                        </div>
-                                        <div class="wysiwyg mb-2">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </article>
 
                             <article class="m-teaser m-teaser--news mb-3 col--eq-height">
                                 <a href="#" class="bg-white border rounded-md top-left-radius-0">
